soql_parser.go
// Code generated from soql.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // soql

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'='", "'<'", "'>'", "'<='", "'>='", "'!='", "'<>'", "','", "'['",
	"']'", "", "", "", "", "", "", "'''", "'('", "')'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "StringLiteral", "BooleanLiteral",
	"NullLiteral", "Identifier", "IntegerLiteral", "FloatingPointLiteral",
	"QUOTE", "LPAREN", "RPAREN", "WHEN", "ELSE", "COMMA", "DOT", "FOR", "UPDATE",
	"COLON", "SELECT", "FROM", "WHERE", "LIMIT", "ORDER", "BY", "ASC", "DESC",
	"WITH", "TYPEOF", "REFERENCE", "VIEW", "VIEWSTAT", "TRACKING", "OFFSET",
	"IN", "END", "USING", "DATA", "CATEGORY", "GROUP", "HAVING", "NULLS", "FIRST",
	"LAST", "SCOPE", "ROLLUP", "CUBE", "LIKE", "THEN", "SOQL_AND", "SOQL_OR",
	"SOQL_NOT", "FIND", "FIELDS", "RETURNING", "ALL",
}

var ruleNames = []string{
	"query", "selectClause", "fieldList", "selectField", "fromClause", "filterScope",
	"soqlField", "subquery", "whereClause", "whereFields", "whereField", "limitClause",
	"orderClause", "soqlValue", "withClause", "soqlFilteringExpression", "groupClause",
	"havingConditionExpression", "offsetClause", "viewClause", "soslLiteral",
	"soslQuery", "soslReturningObject", "apexIdentifier", "literal",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type soqlParser struct {
	*antlr.BaseParser
}

func NewsoqlParser(input antlr.TokenStream) *soqlParser {
	this := new(soqlParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "soql.g4"

	return this
}

// soqlParser tokens.
const (
	soqlParserEOF                  = antlr.TokenEOF
	soqlParserT__0                 = 1
	soqlParserT__1                 = 2
	soqlParserT__2                 = 3
	soqlParserT__3                 = 4
	soqlParserT__4                 = 5
	soqlParserT__5                 = 6
	soqlParserT__6                 = 7
	soqlParserT__7                 = 8
	soqlParserT__8                 = 9
	soqlParserT__9                 = 10
	soqlParserStringLiteral        = 11
	soqlParserBooleanLiteral       = 12
	soqlParserNullLiteral          = 13
	soqlParserIdentifier           = 14
	soqlParserIntegerLiteral       = 15
	soqlParserFloatingPointLiteral = 16
	soqlParserQUOTE                = 17
	soqlParserLPAREN               = 18
	soqlParserRPAREN               = 19
	soqlParserWHEN                 = 20
	soqlParserELSE                 = 21
	soqlParserCOMMA                = 22
	soqlParserDOT                  = 23
	soqlParserFOR                  = 24
	soqlParserUPDATE               = 25
	soqlParserCOLON                = 26
	soqlParserSELECT               = 27
	soqlParserFROM                 = 28
	soqlParserWHERE                = 29
	soqlParserLIMIT                = 30
	soqlParserORDER                = 31
	soqlParserBY                   = 32
	soqlParserASC                  = 33
	soqlParserDESC                 = 34
	soqlParserWITH                 = 35
	soqlParserTYPEOF               = 36
	soqlParserREFERENCE            = 37
	soqlParserVIEW                 = 38
	soqlParserVIEWSTAT             = 39
	soqlParserTRACKING             = 40
	soqlParserOFFSET               = 41
	soqlParserIN                   = 42
	soqlParserEND                  = 43
	soqlParserUSING                = 44
	soqlParserDATA                 = 45
	soqlParserCATEGORY             = 46
	soqlParserGROUP                = 47
	soqlParserHAVING               = 48
	soqlParserNULLS                = 49
	soqlParserFIRST                = 50
	soqlParserLAST                 = 51
	soqlParserSCOPE                = 52
	soqlParserROLLUP               = 53
	soqlParserCUBE                 = 54
	soqlParserLIKE                 = 55
	soqlParserTHEN                 = 56
	soqlParserSOQL_AND             = 57
	soqlParserSOQL_OR              = 58
	soqlParserSOQL_NOT             = 59
	soqlParserFIND                 = 60
	soqlParserFIELDS               = 61
	soqlParserRETURNING            = 62
	soqlParserALL                  = 63
)

// soqlParser rules.
const (
	soqlParserRULE_query                     = 0
	soqlParserRULE_selectClause              = 1
	soqlParserRULE_fieldList                 = 2
	soqlParserRULE_selectField               = 3
	soqlParserRULE_fromClause                = 4
	soqlParserRULE_filterScope               = 5
	soqlParserRULE_soqlField                 = 6
	soqlParserRULE_subquery                  = 7
	soqlParserRULE_whereClause               = 8
	soqlParserRULE_whereFields               = 9
	soqlParserRULE_whereField                = 10
	soqlParserRULE_limitClause               = 11
	soqlParserRULE_orderClause               = 12
	soqlParserRULE_soqlValue                 = 13
	soqlParserRULE_withClause                = 14
	soqlParserRULE_soqlFilteringExpression   = 15
	soqlParserRULE_groupClause               = 16
	soqlParserRULE_havingConditionExpression = 17
	soqlParserRULE_offsetClause              = 18
	soqlParserRULE_viewClause                = 19
	soqlParserRULE_soslLiteral               = 20
	soqlParserRULE_soslQuery                 = 21
	soqlParserRULE_soslReturningObject       = 22
	soqlParserRULE_apexIdentifier            = 23
	soqlParserRULE_literal                   = 24
)

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = soqlParserRULE_query
	return p
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = soqlParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) SelectClause() ISelectClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelectClauseContext)
}

func (s *QueryContext) FromClause() IFromClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFromClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFromClauseContext)
}

func (s *QueryContext) WhereClause() IWhereClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWhereClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWhereClauseContext)
}

func (s *QueryContext) WithClause() IWithClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWithClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWithClauseContext)
}

func (s *QueryContext) GroupClause() IGroupClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IGroupClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IGroupClauseContext)
}

func (s *QueryContext) OrderClause() IOrderClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOrderClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOrderClauseContext)
}

func (s *QueryContext) LimitClause() ILimitClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILimitClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILimitClauseContext)
}

func (s *QueryContext) OffsetClause() IOffsetClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOffsetClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOffsetClauseContext)
}

func (s *QueryContext) ViewClause() IViewClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IViewClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IViewClauseContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(soqlListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(soqlListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (s *QueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case soqlVisitor:
		return t.VisitQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *soqlParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, soqlParserRULE_query)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.SelectClause()
	}
	{
		p.SetState(51)
		p.FromClause()
	}
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == soqlParserWHERE {
		{
			p.SetState(52)
			p.WhereClause()
		}

	}
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == soqlParserWITH {
		{
			p.SetState(55)
			p.WithClause()
		}

	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == soqlParserGROUP {
		{
			p.SetState(58)
			p.GroupClause()
		}

	}
	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == soqlParserORDER {
		{
			p.SetState(61)
			p.OrderClause()
		}

	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == soqlParserLIMIT {
		{
			p.SetState(64)
			p.LimitClause()
		}

	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == soqlParserOFFSET {
		{
			p.SetState(67)
			p.OffsetClause()
		}

	}
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == soqlParserFOR {
		{
			p.SetState(70)
			p.ViewClause()
		}

	}

	return localctx
}

// ISelectClauseContext is an interface to support dynamic dispatch.
type ISelectClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelectClauseContext differentiates from other interfaces.
	IsSelectClauseContext()
}

type SelectClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectClauseContext() *SelectClauseContext {
	var p = new(SelectClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = soqlParserRULE_selectClause
	return p
}

func (*SelectClauseContext) IsSelectClauseContext() {}

func NewSelectClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectClauseContext {
	var p = new(SelectClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = soqlParserRULE_selectClause

	return p
}

func (s *SelectClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectClauseContext) SELECT() antlr.TerminalNode {
	return s.GetToken(soqlParserSELECT, 0)
}

func (s *SelectClauseContext) FieldList() IFieldListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFieldListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFieldListContext)
}

func (s *SelectClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(soqlListener); ok {
		listenerT.EnterSelectClause(s)
	}
}

func (s *SelectClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(soqlListener); ok {
		listenerT.ExitSelectClause(s)
	}
}

func (s *SelectClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case soqlVisitor:
		return t.VisitSelectClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *soqlParser) SelectClause() (localctx ISelectClauseContext) {
	localctx = NewSelectClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, soqlParserRULE_selectClause)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(73)
		p.Match(soqlParserSELECT)
	}
	{
		p.SetState(74)
		p.FieldList()
	}

	return localctx
}

// IFieldListContext is an interface to support dynamic dispatch.
type IFieldListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldListContext differentiates from other interfaces.
	IsFieldListContext()
}

type FieldListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldListContext() *FieldListContext {
	var p = new(FieldListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = soqlParserRULE_fieldList
	return p
}

func (*FieldListContext) IsFieldListContext() {}

func NewFieldListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldListContext {
	var p = new(FieldListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = soqlParserRULE_fieldList

	return p
}

func (s *FieldListContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldListContext) AllSelectField() []ISelectFieldContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISelectFieldContext)(nil)).Elem())
	var tst = make([]ISelectFieldContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISelectFieldContext)
		}
	}

	return tst
}

func (s *FieldListContext) SelectField(i int) ISelectFieldContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectFieldContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISelectFieldContext)
}

func (s *FieldListContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(soqlParserCOMMA)
}

func (s *FieldListContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(soqlParserCOMMA, i)
}

func (s *FieldListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(soqlListener); ok {
		listenerT.EnterFieldList(s)
	}
}

func (s *FieldListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(soqlListener); ok {
		listenerT.ExitFieldList(s)
	}
}

func (s *FieldListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case soqlVisitor:
		return t.VisitFieldList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *soqlParser) FieldList() (localctx IFieldListContext) {
	localctx = NewFieldListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, soqlParserRULE_fieldList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.SelectField()
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == soqlParserCOMMA {
		{
			p.SetState(77)
			p.Match(soqlParserCOMMA)
		}
		{
			p.SetState(78)
			p.SelectField()
		}

		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISelectFieldContext is an interface to support dynamic dispatch.
type ISelectFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelectFieldContext differentiates from other interfaces.
	IsSelectFieldContext()
}

type SelectFieldContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectFieldContext() *SelectFieldContext {
	var p = new(SelectFieldContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = soqlParserRULE_selectField
	return p
}

func (*SelectFieldContext) IsSelectFieldContext() {}

func NewSelectFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectFieldContext {
	var p = new(SelectFieldContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = soqlParserRULE_selectField

	return p
}

func (s *SelectFieldContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectFieldContext) SoqlField() ISoqlFieldContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISoqlFieldContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISoqlFieldContext)
}

func (s *SelectFieldContext) Subquery() ISubqueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISubqueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISubqueryContext)
}

func (s *SelectFieldContext) TYPEOF() antlr.TerminalNode {
	return s.GetToken(soqlParserTYPEOF, 0)
}

func (s *SelectFieldContext) ELSE() antlr.TerminalNode {
	return s.GetToken(soqlParserELSE, 0)
}

func (s *SelectFieldContext) AllFieldList() []IFieldListContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFieldListContext)(nil)).Elem())
	var tst = make([]IFieldListContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFieldListContext)
		}
	}

	return tst
}

func (s *SelectFieldContext) FieldList(i int) IFieldListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFieldListContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFieldListContext)
}

func (s *SelectFieldContext) END() antlr.TerminalNode {
	return s.GetToken(soqlParserEND, 0)
}

func (s *SelectFieldContext) AllWHEN() []antlr.TerminalNode {
	return s.GetTokens(soqlParserWHEN)
}

func (s *SelectFieldContext) WHEN(i int) antlr.TerminalNode {
	return s.GetToken(soqlParserWHEN, i)
}

func (s *SelectFieldContext) AllApexIdentifier() []IApexIdentifierContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IApexIdentifierContext)(nil)).Elem())
	var tst = make([]IApexIdentifierContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IApexIdentifierContext)
		}
	}

	return tst
}

func (s *SelectFieldContext) ApexIdentifier(i int) IApexIdentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IApexIdentifierContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IApexIdentifierContext)
}

func (s *SelectFieldContext) AllTHEN() []antlr.TerminalNode {
	return s.GetTokens(soqlParserTHEN)
}

func (s *SelectFieldContext) THEN(i int) antlr.TerminalNode {
	return s.GetToken(soqlParserTHEN, i)
}

func (s *SelectFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectFieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectFieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(soqlListener); ok {
		listenerT.EnterSelectField(s)
	}
}

func (s *SelectFieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(soqlListener); ok {
		listenerT.ExitSelectField(s)
	}
}

func (s *SelectFieldContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case soqlVisitor:
		return t.VisitSelectField(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *soqlParser) SelectField() (localctx ISelectFieldContext) {
	localctx = NewSelectFieldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, soqlParserRULE_selectField)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(101)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case soqlParserIdentifier, soqlParserREFERENCE, soqlParserOFFSET, soqlParserDATA, soqlParserCATEGORY, soqlParserGROUP, soqlParserSCOPE, soqlParserTHEN, soqlParserFIND, soqlParserRETURNING, soqlParserALL:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(84)
			p.SoqlField()
		}

	case soqlParserSELECT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(85)
			p.Subquery()
		}

	case soqlParserTYPEOF:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(86)
			p.Match(soqlParserTYPEOF)
		}
		{
			p.SetState(87)
			p.SoqlField()
		}
		p.SetState(93)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = _la == soqlParserWHEN {
			{
				p.SetState(88)
				p.Match(soqlParserWHEN)
			}
			{
				p.SetState(89)
				p.ApexIdentifier()
			}
			{
				p.SetState(90)
				p.Match(soqlParserTHEN)
			}
			{
				p.SetState(91)
				p.FieldList()
			}

			p.SetState(95)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(97)
			p.Match(soqlParserELSE)
		}
		{
			p.SetState(98)
			p.FieldList()
		}
		{
			p.SetState(99)
			p.Match(soqlParserEND)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IFromClauseContext is an interface to support dynamic dispatch.
type IFromClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFromClauseContext differentiates from other interfaces.
	IsFromClauseContext()
}

type FromClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFromClauseContext() *FromClauseContext {
	var p = new(FromClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = soqlParserRULE_fromClause
	return p
}

func (*FromClauseContext) IsFromClauseContext() {}

func NewFromClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FromClauseContext {
	var p = new(FromClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = soqlParserRULE_fromClause

	return p
}

func (s *FromClauseContext) GetParser() antlr.Parser { return s.parser }
